hphp/test/slow/inout/autoloader.php.expectf
autoloading function: hit1
string(4) "hit1"
autoloading function: hit2
string(4) "hit2"
autoloading function: hit3
string(4) "hit3"
autoloading function: partial

Fatal error: Uncaught exception 'InvalidArgumentException' with message 'partial() does not expect parameter 1 to be inout, but the call was annotated with 'inout'' in %s/autoloader.php:27
%a
